--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-layout": "^4.11.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
+    "gatsby-plugin-manifest": "^5.11.0",
     "gatsby-plugin-react-helmet": "^6.11.0",
     "gatsby-plugin-root-import": "^2.0.8",
     "gatsby-plugin-sharp": "^5.11.0",
